Fix issue with modules button being off screen

--- a/client/main/ribbon/ribbonmenu.css
+++ b/client/main/ribbon/ribbonmenu.css
@@ -96,7 +96,7 @@
 }
 
 [focusmode="default"] .jmv-ribbon-button:not([aria-disabled]):not(.maintain-color):hover {
-    background-color: #3e6da93b;
+    background-color: #c6d1df;
 }
 
 [focusmode="hover"] .jmv-ribbon-button:not([aria-disabled]):not(.maintain-color):hover {
